--- a/trunk/fClients/fDump/fDump.vcxproj.filters
+++ b/trunk/fClients/fDump/fDump.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="client.cpp">
+    <ClCompile Include="..\..\fDump\jni\client.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
