client.cpp에 있던 코드들을 utility와 fType로 분리하여 나누고 헤더를 적절히 설정함

--- a/fClients/fDump/fDump.vcxproj
+++ b/fClients/fDump/fDump.vcxproj
@@ -12,6 +12,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\fDump\jni\client.cpp" />
+    <ClCompile Include="..\..\fDump\jni\utility.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\fDump\jni\fType.h" />
+    <ClInclude Include="..\..\fDump\jni\utility.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{EE6B58AC-4087-45A7-AD0B-084FDDAAF8B6}</ProjectGuid>
