--- a/fClients/fDump/fDump.vcxproj.filters
+++ b/fClients/fDump/fDump.vcxproj.filters
@@ -18,5 +18,16 @@
     <ClCompile Include="..\..\fDump\jni\client.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\fDump\jni\utility.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\fDump\jni\utility.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\fDump\jni\fType.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
