--- a/trunk/fClients/fDump/fDump.vcxproj.filters
+++ b/trunk/fClients/fDump/fDump.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="..\..\fDump\jni\CRestoreTask.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\fDump\jni\fMacro.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
