macro를 별도의 파일로 정의하고 이를 사용 CRestoreTask에서 헤더를 파싱해서 넘겨져온 데이터를 검증

--- a/fClients/fDump/fDump.vcxproj
+++ b/fClients/fDump/fDump.vcxproj
@@ -17,6 +17,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\fDump\jni\CRestoreTask.h" />
+    <ClInclude Include="..\..\fDump\jni\fMacro.h" />
     <ClInclude Include="..\..\fDump\jni\fType.h" />
     <ClInclude Include="..\..\fDump\jni\utility.h" />
   </ItemGroup>
